--- a/BienestarBovino/app/src/main/res/layout/compra.xml
+++ b/BienestarBovino/app/src/main/res/layout/compra.xml
@@ -10,8 +10,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Nombre"
-        android:textColor="@android:color/white"
-        android:textColorHint="@android:color/white"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -74,7 +72,7 @@
         android:hint="Ingrese la fecha"
         android:inputType="date"
         android:minHeight="48dp"
-        android:background="#1E8708"
+        android:background="@drawable/rectangle_drawable"
         android:textColor="#FFFFFF"
         android:textAlignment="center"
         android:textColorHint="@android:color/white"
@@ -103,7 +101,7 @@
         android:id="@+id/editTextPrice"
         android:layout_width="304dp"
         android:layout_height="50dp"
-        android:background="#1E8708"
+        android:background="@drawable/rectangle_drawable"
         android:ems="10"
         android:hint="Ingrese el costo"
         android:textAlignment="center"
@@ -126,7 +124,7 @@
         android:textAlignment="center"
         android:textColorHint="@android:color/white"
         android:inputType="textPersonName"
-        android:background="#1E8708"
+        android:background="@drawable/rectangle_drawable"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -191,7 +189,7 @@
         android:id="@+id/editTextId"
         android:layout_width="304dp"
         android:layout_height="50dp"
-        android:background="#1E8708"
+        android:background="@drawable/rectangle_drawable"
         android:textColor="#FFFFFF"
         android:ems="10"
         android:hint="Ingrese la identificación"
