--- a/BienestarBovino/app/src/main/res/layout/register.xml
+++ b/BienestarBovino/app/src/main/res/layout/register.xml
@@ -21,11 +21,10 @@
         android:id="@+id/editTextTextPersonName"
         android:layout_width="250dp"
         android:layout_height="51dp"
-        android:background="#1E8708"
+        android:background="@drawable/rectangle_drawable"
         android:ems="10"
         android:hint="Ingrese su usuario"
         android:inputType="textPersonName"
-        android:minHeight="48dp"
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/white"
@@ -40,7 +39,7 @@
         android:id="@+id/editTextTextEmailAddress"
         android:layout_width="252dp"
         android:layout_height="52dp"
-        android:background="#1E8708"
+        android:background="@drawable/rectangle_drawable"
         android:ems="10"
         android:hint="Ingrese su correo electronico"
         android:inputType="textEmailAddress"
@@ -72,7 +71,7 @@
         android:id="@+id/editTextTextPassword4"
         android:layout_width="251dp"
         android:layout_height="51dp"
-        android:background="#1E8708"
+        android:background="@drawable/rectangle_drawable"
         android:ems="10"
         android:hint="Confirmar contraseña"
         android:inputType="textPassword"
@@ -90,7 +89,7 @@
         android:id="@+id/editTextTextPassword3"
         android:layout_width="251dp"
         android:layout_height="48dp"
-        android:background="#1E8708"
+        android:background="@drawable/rectangle_drawable"
         android:ems="10"
         android:hint="Contraseña"
         android:inputType="textPassword"
