--- a/BienestarBovino/app/src/main/res/layout/venta.xml
+++ b/BienestarBovino/app/src/main/res/layout/venta.xml
@@ -93,14 +93,10 @@
         android:id="@+id/editTextTextSale"
         android:layout_width="312dp"
         android:layout_height="54dp"
-        android:background="#1E8708"
+        android:background="@drawable/rectangle_drawable"
         android:ems="10"
-
-        android:shadowRadius=""
-
         android:hint="Ingrese monto de venta"
         android:inputType="textPersonName"
-        android:minHeight="48dp"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textColorHint="@android:color/white"
@@ -141,15 +137,15 @@
 
     <EditText
         android:id="@+id/editTextDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="214dp"
+        android:layout_height="54dp"
+        android:background="@drawable/rectangle_drawable"
         android:ems="10"
         android:hint="Ingrese la fecha"
-        android:background="#1E8708"
+        android:inputType="date"
+        android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/white"
-        android:inputType="date"
-        android:minHeight="48dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.189"
@@ -161,7 +157,6 @@
         android:id="@+id/spinner"
         android:layout_width="324dp"
         android:layout_height="60dp"
-        android:background="#1E8708"
         android:contentDescription="@string/app_name"
         android:outlineAmbientShadowColor="#FFFFFF"
         android:outlineSpotShadowColor="#FFFFFF"
