--- a/BienestarBovino/app/src/main/res/layout/finca.xml
+++ b/BienestarBovino/app/src/main/res/layout/finca.xml
@@ -77,8 +77,11 @@
         android:id="@+id/imageView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/registrar_finca"
-        tools:layout_editor_absoluteX="147dp"
-        tools:layout_editor_absoluteY="158dp" />
+        app:layout_constraintBottom_toBottomOf="@+id/buttonContinue"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.236"
+        app:srcCompat="@drawable/registrar_finca" />
 
 </android.support.constraint.ConstraintLayout>
