--- a/BienestarBovino/app/src/main/res/layout/login.xml
+++ b/BienestarBovino/app/src/main/res/layout/login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".loginActivity">
 
     <TextView
         android:id="@+id/textView7"
@@ -19,7 +19,7 @@
         app:layout_constraintVertical_bias="0.89" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/textViewNewUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
@@ -35,7 +35,7 @@
         app:layout_constraintVertical_bias="0.928" />
 
     <EditText
-        android:id="@+id/editTextTextPassword2"
+        android:id="@+id/editTextPasswordLogin"
         android:layout_width="320dp"
         android:layout_height="52dp"
         android:background="@drawable/rectangle_drawable"
@@ -78,7 +78,7 @@
         app:layout_constraintVertical_bias="0.101" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/buttonAccept"
         android:layout_width="317dp"
         android:layout_height="68dp"
         android:background="#146304"
@@ -92,9 +92,9 @@
         app:layout_constraintVertical_bias="0.805" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName2"
+        android:id="@+id/editTextEmailLogin"
         android:layout_width="324dp"
-        android:layout_height="39dp"
+        android:layout_height="48dp"
         android:layout_centerInParent="true"
         android:background="@drawable/rectangle_drawable"
         android:ems="10"
