Prueba para calendario
Intento de poner un calendario en compra, y se corrigió las mayúsculas de los botones para que quedara solo con la primera letra en mayúscula.

--- a/BienestarBovino/app/src/main/res/layout/register.xml
+++ b/BienestarBovino/app/src/main/res/layout/register.xml
@@ -73,6 +73,7 @@
         android:background="#146304"
         android:text="Registrar"
         android:textColor="#FFFFFF"
+        android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.537"
