--- a/BienestarBovino/app/src/main/res/layout/welcome.xml
+++ b/BienestarBovino/app/src/main/res/layout/welcome.xml
@@ -25,6 +25,7 @@
         android:onClick="loginUser"
         android:text="Empezar"
         android:textColor="#FFFFFF"
+        android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
