--- a/BienestarBovino/app/src/main/res/layout/finca.xml
+++ b/BienestarBovino/app/src/main/res/layout/finca.xml
@@ -59,7 +59,7 @@
         app:layout_constraintVertical_bias="0.763" />
 
     <Button
-        android:id="@+id/buttonContinueFinca"
+        android:id="@+id/buttonContinue"
         android:layout_width="416dp"
         android:layout_height="57dp"
         android:background="#146304"
@@ -79,7 +79,7 @@
         android:id="@+id/imageView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@+id/buttonContinueFinca"
+        app:layout_constraintBottom_toBottomOf="@+id/buttonContinue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
