--- a/BienestarBovino/app/src/main/res/layout/menuprincipal.xml
+++ b/BienestarBovino/app/src/main/res/layout/menuprincipal.xml
@@ -68,16 +68,16 @@
 
     <ImageButton
         android:id="@+id/imageButton2"
-        android:layout_width="157dp"
-        android:layout_height="115dp"
+        android:layout_width="158dp"
+        android:layout_height="105dp"
         android:background="@drawable/rectangle_drawable"
         android:contentDescription="@string/app_name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.846"
+        app:layout_constraintHorizontal_bias="0.138"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.348"
+        app:layout_constraintVertical_bias="0.364"
         app:srcCompat="@drawable/vaca" />
 
     <ImageButton
@@ -88,10 +88,10 @@
         android:contentDescription="@string/app_name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.137"
+        app:layout_constraintHorizontal_bias="0.85"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.348"
+        app:layout_constraintVertical_bias="0.364"
         app:srcCompat="@drawable/produccion" />
 
     <ImageView
@@ -110,7 +110,7 @@
         android:id="@+id/textView8"
         android:layout_width="158dp"
         android:layout_height="20dp"
-        android:text="Producción"
+        android:text="Ganado"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textStyle="bold"
@@ -125,7 +125,7 @@
         android:id="@+id/textView17"
         android:layout_width="158dp"
         android:layout_height="20dp"
-        android:text="Control Reproductivo"
+        android:text="Pesaje"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textStyle="bold"
@@ -155,15 +155,15 @@
         android:id="@+id/botonchequeo"
         android:layout_width="157dp"
         android:layout_height="105dp"
-        android:onClick="loginUser"
         android:background="@drawable/rectangle_drawable"
         android:contentDescription="@string/app_name"
+        android:onClick="loginUser"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.137"
+        app:layout_constraintHorizontal_bias="0.141"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.591"
+        app:layout_constraintVertical_bias="0.602"
         app:srcCompat="@drawable/image_1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
