Union de ventanas con botones

--- a/BienestarBovino/app/src/main/res/layout/menuprincipal.xml
+++ b/BienestarBovino/app/src/main/res/layout/menuprincipal.xml
@@ -7,7 +7,7 @@
     tools:context=".MenuActivity">
 
     <Button
-        android:id="@+id/buttonBack3"
+        android:id="@+id/btnVacunaRegresar"
         android:layout_width="417dp"
         android:layout_height="49dp"
         android:background="#146304"
