--- a/BienestarBovino/app/src/main/res/layout/compra.xml
+++ b/BienestarBovino/app/src/main/res/layout/compra.xml
@@ -63,7 +63,7 @@
         app:layout_constraintVertical_bias="0.914" />
 
     <Button
-        android:id="@+id/buttonBack2"
+        android:id="@+id/btnCompraRegresar"
         android:layout_width="417dp"
         android:layout_height="49dp"
         android:background="#146304"
