--- a/BienestarBovino/app/src/main/res/layout/menuprincipal.xml
+++ b/BienestarBovino/app/src/main/res/layout/menuprincipal.xml
@@ -24,7 +24,7 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <Button
-        android:id="@+id/buttonRegister3"
+        android:id="@+id/buttonRegisterMenu"
         android:layout_width="414dp"
         android:layout_height="54dp"
         android:background="#146304"
@@ -57,7 +57,7 @@
         android:layout_width="268dp"
         android:layout_height="78dp"
         android:layout_marginTop="40dp"
-        android:text="menu"
+        android:text="Menu"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="20sp"
@@ -68,11 +68,11 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/imageButton2"
+        android:id="@+id/imageButtonGanado"
         android:layout_width="158dp"
         android:layout_height="105dp"
         android:background="@drawable/rectangle_drawable"
-        android:contentDescription="@string/app_name"
+        android:contentDescription="/Users/kev/Documents/GitHub/Bienestar-Bovino/BienestarBovino/app/src/main/res/drawable/vaca.png"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.138"
@@ -82,11 +82,11 @@
         app:srcCompat="@drawable/vaca" />
 
     <ImageButton
-        android:id="@+id/imageButtonInventory"
+        android:id="@+id/imageButtonPesaje"
         android:layout_width="157dp"
         android:layout_height="105dp"
         android:background="@drawable/rectangle_drawable"
-        android:contentDescription="@string/app_name"
+        android:contentDescription="/Users/kev/Documents/GitHub/Bienestar-Bovino/BienestarBovino/app/src/main/res/drawable/produccion.png"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.85"
@@ -157,8 +157,7 @@
         android:layout_width="157dp"
         android:layout_height="105dp"
         android:background="@drawable/rectangle_drawable"
-        android:contentDescription="@string/app_name"
-        android:onClick="loginUser"
+        android:contentDescription="/Users/kev/Documents/GitHub/Bienestar-Bovino/BienestarBovino/app/src/main/res/drawable/image_1.png"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.141"
