--- a/BienestarBovino/app/src/main/res/layout/venta.xml
+++ b/BienestarBovino/app/src/main/res/layout/venta.xml
@@ -80,7 +80,7 @@
         app:layout_constraintVertical_bias="0.345" />
 
     <TextView
-        android:id="@+id/textViewLogin"
+        android:id="@+id/textViewNameVenta"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Nombre: "
