--- a/BienestarBovino/app/src/main/res/layout/register.xml
+++ b/BienestarBovino/app/src/main/res/layout/register.xml
@@ -132,7 +132,7 @@
         app:layout_constraintVertical_bias="0.045" />
 
     <TextView
-        android:id="@+id/textViewNameVenta"
+        android:id="@+id/textViewIniciarSesion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
