--- a/BienestarBovino/app/src/main/res/layout/compra.xml
+++ b/BienestarBovino/app/src/main/res/layout/compra.xml
@@ -223,7 +223,7 @@
         android:id="@+id/buttonCalendar"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:text="Sel"
+        android:text="Abrir "
         android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
