--- a/BienestarBovino/app/src/main/res/layout/venta.xml
+++ b/BienestarBovino/app/src/main/res/layout/venta.xml
@@ -7,6 +7,19 @@
     tools:context=".SaleActivity">
 
 
+    <Button
+        android:id="@+id/buttonCalendarSale"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:text="Abrir"
+        android:textAllCaps="false"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.801"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.747" />
+
     <ImageView
         android:id="@+id/imageView13"
         android:layout_width="72dp"
@@ -150,7 +163,7 @@
         app:layout_constraintVertical_bias="0.672" />
 
     <EditText
-        android:id="@+id/editTextDate"
+        android:id="@+id/editTextDateSale"
         android:layout_width="214dp"
         android:layout_height="54dp"
         android:background="@drawable/rectangle_drawable"
