--- a/BienestarBovino/app/src/main/res/layout/menuprincipal.xml
+++ b/BienestarBovino/app/src/main/res/layout/menuprincipal.xml
@@ -28,7 +28,7 @@
         android:layout_width="414dp"
         android:layout_height="54dp"
         android:background="#146304"
-        android:text="Crear Bovino"
+        android:text="Agregar Bovino"
         android:textColor="#FFFFFF"
         android:textSize="16sp"
         android:textStyle="bold"
