--- a/BienestarBovino/app/src/main/res/layout/addbovino.xml
+++ b/BienestarBovino/app/src/main/res/layout/addbovino.xml
@@ -3,12 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".NewBovinoActivity">
 
     <Spinner
         android:id="@+id/spinner4"
         android:layout_width="411dp"
         android:layout_height="48dp"
+        android:contentDescription="@string/app_name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -56,6 +58,7 @@
         android:id="@+id/spinneraddbovino"
         android:layout_width="166dp"
         android:layout_height="54dp"
+        android:contentDescription="@string/app_name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.91"
@@ -67,6 +70,7 @@
         android:id="@+id/spinneraddbovino8"
         android:layout_width="166dp"
         android:layout_height="54dp"
+        android:contentDescription="@string/app_name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.065"
@@ -82,11 +86,11 @@
         android:ems="10"
         android:hint="Seleccione la fecha"
         android:inputType="date"
-        android:textSize="20sp"
         android:minHeight="48dp"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textColorHint="@android:color/white"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.126"
@@ -123,13 +127,13 @@
     <EditText
         android:id="@+id/editTextaddbovino1"
         android:layout_width="112dp"
-        android:layout_height="42dp"
+        android:layout_height="48dp"
         android:background="@drawable/rectangle_drawable"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Al destete"
-        android:textColor="#FFFFFF"
         android:textAlignment="center"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -140,13 +144,13 @@
     <EditText
         android:id="@+id/editTextaddbovino2"
         android:layout_width="90dp"
-        android:layout_height="41dp"
+        android:layout_height="48dp"
         android:background="@drawable/rectangle_drawable"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Al nacer"
-        android:textColor="#FFFFFF"
         android:textAlignment="center"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.056"
@@ -157,13 +161,13 @@
     <EditText
         android:id="@+id/editTextaddbovino3"
         android:layout_width="106dp"
-        android:layout_height="41dp"
+        android:layout_height="48dp"
         android:background="@drawable/rectangle_drawable"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="12 meses"
-        android:textColor="#FFFFFF"
         android:textAlignment="center"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.927"
@@ -173,10 +177,12 @@
 
     <Button
         android:id="@+id/buttonaddbovino4"
-        android:layout_width="411dp"
-        android:layout_height="56dp"
-        android:text="Regresar"
+        android:layout_width="417dp"
+        android:layout_height="46dp"
         android:background="#146304"
+        android:text="Regresar"
+        android:textAlignment="center"
+        android:textAllCaps="false"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -187,11 +193,13 @@
 
     <Button
         android:id="@+id/buttonaddbovino5"
-        android:layout_width="411dp"
-        android:layout_height="56dp"
+        android:layout_width="414dp"
+        android:layout_height="54dp"
         android:layout_marginTop="608dp"
         android:background="#146304"
         android:text="Agregar Bovino"
+        android:textAlignment="center"
+        android:textAllCaps="false"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -207,7 +215,7 @@
         android:background="#7AD268"
         android:text="Origen"
         android:textAlignment="center"
-        android:textColor="#FFFFFF"
+        android:textColor="#BF360C"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -221,10 +229,10 @@
         android:id="@+id/textViewaddbovino7"
         android:layout_width="412dp"
         android:layout_height="28dp"
-        android:text="Peso"
         android:background="#7AD268"
+        android:text="Peso"
         android:textAlignment="center"
-        android:textColor="#FFFFFF"
+        android:textColor="#BF360C"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
